tests/parsing/smtlib/v2.7/errors/149_function_def_bad_body_1.smt2
(set-logic ALL)
(define-fun-rec foo () bool _)
